# skill

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md  clippy.toml  install.ps1  install.sh  rustfmt.toml
.github/workflows/: cd.yml  ci.yml  publish.yml  release.yml  rust-publish.yml  stale.yml
skill/: Cargo.toml
skill-cli/: Cargo.toml
skill-cli/src/: main.rs  ui.rs
skill-cli/src/cmd/: add.rs  check.rs  find.rs  init.rs  remove.rs  sync.rs  update.rs
skill/src/: agents.rs  blob.rs  error.rs  git.rs  github.rs  installer.rs  lib.rs  local_lock.rs  lock.rs  manager.rs  path_util.rs  plugin_manifest.rs  sanitize.rs  skills.rs  source.rs  telemetry.rs  types.rs
skill/src/agents/: builtin.rs  mod.rs
skill/src/installer/: fs.rs  install.rs  mod.rs  paths.rs  scan.rs
skill/src/providers/: mod.rs  registry.rs  traits.rs  wellknown.rs
skill/src/source/: fragment.rs  matchers.rs  mod.rs  regex.rs
skill/src/util/: mod.rs  time.rs
skills-cli/: Cargo.toml
skills-cli/src/: main.rs  ui.rs
skills-cli/src/cmd/: add.rs  check.rs  completions.rs  doctor.rs  find.rs  init.rs  install_lock.rs  list.rs  mod.rs  remove.rs  self_update.rs  sync.rs  update.rs  upgrade.rs
skills-cli/src/cmd/add/: hooks.rs  install.rs  output.rs  select.rs
skills-cli/src/commands/: add.rs  check.rs  completions.rs  doctor.rs  find.rs  init.rs  install_lock.rs  list.rs  mod.rs  remove.rs  sync.rs  update.rs  upgrade.rs
skills-cli/src/commands/add/: hooks.rs  install.rs  output.rs  select.rs  wellknown.rs
skills-cli/src/commands/update/: global.rs  mod.rs  project.rs  scope.rs  source_builder.rs  stats.rs
skills-cli/src/ui/: banner.rs  emit.rs  format.rs  fzf.rs  input.rs  mod.rs  multiselect.rs  render.rs  style.rs
