[workspace]
members = ["skill", "skills-cli"]
default-members = ["skill"]
resolver = "3"

[workspace.package]
version = "0.6.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/qntx/skill"
description = "Blazing-fast Vercel Skills CLI, reborn in Rust. 100% command parity, zero compromises."

[workspace.dependencies]
skill = { version = "0.6", path = "skill", features = ["network", "telemetry"] }

# Async runtime
tokio = { version = "1.50.0", default-features = false }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"

# Error handling
thiserror = "2.0.18"
miette = { version = "7.6.0", features = ["fancy"] }

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# CLI
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
cliclack = "0.4.1"
console = "0.16.3"
crossterm = "0.29.0"

# Networking
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
urlencoding = "2.1.3"
url = "2.5.8"

# Archive extraction
flate2 = "1.1.9"
tar = "0.4.44"
zip = { version = "8.2.0", default-features = false, features = ["deflate"] }

# Utilities
sha2 = "0.10.9"
regex = "1.12.3"
dirs = "6.0.0"
tempfile = "3.27.0"
pathdiff = "0.2.3"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

[profile.test]
opt-level = 2

[profile.ci]
debug = false
inherits = "dev"

[profile.bench]
debug = true
inherits = "release"

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
single_use_lifetimes = "warn"
unused_lifetimes = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
variant_size_differences = "warn"
unsafe_code = "warn"
unused_qualifications = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }
unused_imports = "warn"
unused_macro_rules = "warn"
non_ascii_idents = "warn"
non_camel_case_types = "warn"
non_snake_case = "warn"
non_upper_case_globals = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
private_intra_doc_links = "warn"
missing_crate_level_docs = "warn"
invalid_codeblock_attributes = "warn"
invalid_html_tags = "warn"
invalid_rust_codeblocks = "warn"
bare_urls = "warn"
unescaped_backticks = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
restriction = { level = "allow", priority = -1 }
dbg_macro = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
unimplemented = "warn"
panic = "warn"
unwrap_used = "warn"
unwrap_in_result = "warn"
expect_used = "allow"
panic_in_result_fn = "warn"
indexing_slicing = "allow"
fallible_impl_from = "warn"
missing_docs_in_private_items = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
doc_markdown = "warn"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
must_use_candidate = "warn"
return_self_not_must_use = "warn"
fn_params_excessive_bools = "warn"
struct_excessive_bools = "allow"
cognitive_complexity = "warn"
too_many_lines = "allow"
excessive_nesting = "allow"
clone_on_ref_ptr = "warn"
redundant_clone = "warn"
large_types_passed_by_value = "warn"
implicit_hasher = "warn"
cast_precision_loss = "allow"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_lossless = "warn"
future_not_send = "warn"
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
option_if_let_else = "warn"
wildcard_enum_match_arm = "allow"
match_wildcard_for_single_variants = "warn"
match_same_arms = "warn"
module_name_repetitions = "allow"
similar_names = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
significant_drop_tightening = "allow"
used_underscore_binding = "warn"
mem_forget = "warn"
