[package]
name = "skill"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
tokio = { workspace = true, features = ["fs", "process", "io-util"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
pathdiff = { workspace = true }
tempfile = { workspace = true }
urlencoding = { workspace = true }
reqwest = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["fs", "process", "io-util", "macros", "rt"] }

[target.'cfg(windows)'.dependencies]
junction = "1"

[features]
default = ["network"]
network = ["dep:reqwest"]
telemetry = ["network"]

[lints]
workspace = true
