[package]
name = "skills-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "skills"
path = "src/main.rs"

[dependencies]
skill = { workspace = true, features = ["network", "telemetry"] }

tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
miette = { workspace = true }
cliclack = { workspace = true }
crossterm = { workspace = true }
urlencoding = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
