[package]
name = "skills-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "skills"
path = "src/main.rs"

[dependencies]
# Local workspace crates first, then third-party dependencies sorted alphabetically.
skill = { workspace = true, features = ["network", "telemetry"] }

clap = { workspace = true }
clap_complete = { workspace = true }
cliclack = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }
flate2 = { workspace = true }
miette = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = { workspace = true }
zip = { workspace = true }

[lints]
workspace = true
